# audio-analysis-mcp

./: .gitignore  7-audio-analysis-mcp.md  8c-audio-analysis-mcp.md  CHANGELOG.md  CLAUDE.md  PRIVACY.md  README.md  Taskfile.yaml  audio-pipeline-plan.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  pr-title.yml  publish.yml  release.yml
.run/: run-server.run.xml
archive/: 7-audio-analysis-mcp.md
docs/: TODO.md  index.html
docs/research/: caetano-act-segmentation.md  demucs-findings.md
docs/superpowers/plans/: 2026-04-20-research-subprojects-scaffold.md  2026-04-24-phase2-note-extraction.md  2026-04-24-workspace-refactor.md  2026-04-26-amplitude-expert.md  2026-04-26-note-triage-refactor.md  2026-05-02-subtractive-tone-training.md  2026-06-17-installable-packaging.md  2026-06-19-commitizen-release-automation.md
docs/superpowers/plans/completed/: 2026-04-24-workspace-refactor.md
docs/superpowers/specs/: 2026-04-20-research-decomposition-design.md  2026-04-23-phase2-note-extraction-design.md  2026-04-24-workspace-refactor-design.md  2026-04-25-songformer-integration-design.md  2026-06-17-installable-packaging-design.md  2026-06-19-commitizen-release-automation-design.md
schemas/: README.md
scratch/: check_single_overlap.py  explore_adsr_fit.py  explore_clustering.py  explore_consensus.py  explore_demucs.py  explore_envelope.py  explore_jsonschema_resolver.py  explore_model_param_count.py  explore_models.py  explore_overlap_clustering.py  explore_progress.py  explore_pytorch_mps.py  explore_signalflow.py  explore_signalflow_sample_rate.py  explore_subtractive_renderer.py  explore_sustain_isolation.py  explore_t11_eval_helpers.py  explore_t9_review.py  extract_cluster_audio.py  inspect_van_halen_triage.py  list_notes_0_5.py  measure_fp16_rss.py  notes_at_16s.py  plot_amplitude_envelopes.py  run_inference_example.py  verify_tone_gen_param_count.py
scratch/t11_smoke_check/ckpt/: checkpoint.pt  eval_report.json
scratch/t11_smoke_check/ds/: labels.jsonl  manifest.json
scripts/: _eval_helpers.py  eval_tone_generation.py  generate_subtractive_dataset.py  smoke_packaging.py  train_tone_generation.py
src/audio_analysis_mcp/: __main__.py  _demucs_progress.py  schemas.py  server.py  workspace.py
src/audio_analysis_mcp/analysis/: adsr_fit.py  adsr_triage.py  amplitude.py  comparison.py  envelope.py  note_isolation.py  note_triage.py  spectral.py  structure_analysis.py  sustain_isolation.py  transcription.py
src/audio_analysis_mcp/audio/: capture.py  normalize.py
src/audio_analysis_mcp/cli/: stem_separate.py
src/audio_analysis_mcp/research/: __init__.py
src/audio_analysis_mcp/research/tone_generation/: README.md  __init__.py  dataset.py  renderer.py  schema_io.py
src/audio_analysis_mcp/service/: __init__.py  __main__.py  app.py  progress.py  sse.py
src/audio_analysis_mcp/tools/: amplitude_analyze.py  audio_compare.py  audio_render.py  import_audio.py  note_isolate.py  note_transcribe.py  note_triage.py  spectrum_analyze.py  stem_separate.py  structure_analyze.py
tests/: conftest.py  test_adsr_fit.py  test_adsr_triage.py  test_amplitude.py  test_audio_render.py  test_cluster_schema.py  test_comparison.py  test_demucs_progress_threading.py  test_entry_point.py  test_envelope.py  test_graceful_degradation.py  test_import_audio.py  test_mcp_tools.py  test_note_isolation.py  test_note_triage.py  test_packaging_metadata.py  test_service_health.py  test_service_import.py  test_service_stems_sse.py  test_service_structure_sse.py  test_service_transcribe_sse.py  test_service_triage_sse.py  test_spectral.py  test_stem_separate.py  test_structure_analysis.py  test_sustain_isolation.py  test_tone_generation_dataset.py  test_tone_generation_model.py  test_tone_generation_renderer.py  test_tone_generation_schema_io.py  test_tone_generation_smoke.py  test_transcription.py  test_workspace.py
