[project]
name = "audio-analysis-mcp"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "mcp>=1.0.0",
  "demucs>=4.0.0",
  "librosa>=0.10.0",
  "torch>=2.0",
  "torchaudio>=2.0",
  "torchcodec>=0.1",
  "numpy>=1.24",
  "scipy>=1.10",
  "soundfile>=0.12",
  "sounddevice>=0.4",
  "pydantic>=2.0",
  "basic-pitch>=0.4.0",
  # signalflow ceiling: 0.5.4 ships no macOS wheel — revisit when upstream publishes one.
  "signalflow>=0.4.0,<0.5.4",
  "jsonschema>=4.21",
  "referencing>=0.30",
  "songformer",
]

[tool.uv.sources]
songformer = { path = "../SongFormer", editable = true }

[dependency-groups]
dev = [
  "matplotlib>=3.10.9",
  "mypy>=1.10",
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m not slow')"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[[tool.mypy.overrides]]
module = [
  "librosa.*",
  "sounddevice.*",
  "soundfile.*",
  "scipy.*",
  "demucs.*",
  "tqdm.*",
  "basic_pitch.*",
  "pretty_midi.*",
  "signalflow.*",
  "jsonschema.*",
  "referencing.*",
  "songformer.*",
]
ignore_missing_imports = true
