[project]
name = "audio-analysis-mcp"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "mcp>=1.0.0",
  "demucs>=4.0.0",
  "librosa>=0.10.0",
  "torch>=2.0",
  "torchaudio>=2.0",
  "torchcodec>=0.1",
  "numpy>=1.24",
  "scipy>=1.10",
  "soundfile>=0.12",
  "sounddevice>=0.4",
  "pydantic>=2.0",
  "basic-pitch>=0.4.0",
  # signalflow ceiling: 0.5.4 ships no macOS wheel — revisit when upstream publishes one.
  "signalflow>=0.4.0,<0.5.4",
  "jsonschema>=4.21",
  "referencing>=0.30",
  "songformer @ git+https://github.com/uribrecher/SongFormer.git@v0.2.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sse-starlette>=2.1",
]

# Local dev override: edit ../SongFormer and see changes immediately.
# CI passes `uv sync --no-sources` so the git URL above wins on the runner.
[tool.uv.sources]
songformer = { path = "../SongFormer", editable = true }

[dependency-groups]
dev = [
  "matplotlib>=3.10.9",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Allow `songformer @ git+https://...` in [project.dependencies].
[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m not slow')"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[[tool.mypy.overrides]]
module = [
  "librosa.*",
  "sounddevice.*",
  "soundfile.*",
  "scipy.*",
  "demucs.*",
  "tqdm.*",
  "basic_pitch.*",
  "pretty_midi.*",
  "signalflow.*",
  "jsonschema.*",
  "referencing.*",
  "songformer.*",
  "sse_starlette.*",
]
ignore_missing_imports = true
