[project]
name = "audio-analysis-mcp"
version = "0.1.0"
description = "Audio analysis MCP server: stem separation, transcription, spectrum, and comparison for AI-driven sound recreation."
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
  "mcp>=1.0.0",
  "demucs>=4.0.0",
  "librosa>=0.10.0",
  "torch>=2.0",
  "torchaudio>=2.0",
  "torchcodec>=0.1",
  "numpy>=1.24",
  "scipy>=1.10",
  "soundfile>=0.12",
  "sounddevice>=0.4",
  "pydantic>=2.0",
  "basic-pitch>=0.4.0",
  "jsonschema>=4.21",
  "referencing>=0.30",
]

[project.optional-dependencies]
# FastAPI service mode (service/ subpackage). Not needed for the stdio MCP server.
service = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sse-starlette>=2.1",
]

[project.scripts]
audio-analysis-mcp = "audio_analysis_mcp.__main__:main"

# Local dev override: edit ../SongFormer and see changes immediately.
# On CI/release runners this override is disabled — UV_NO_SOURCES=1 in the
# test-and-lint job, and the --no-sources flag in the build/smoke/audit jobs —
# so songformer resolves from its git URL in the dev dependency-group instead.
[tool.uv.sources]
songformer = { path = "../SongFormer", editable = true }

[dependency-groups]
dev = [
  "matplotlib>=3.10.9",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "commitizen>=4.0",
  # Dev-only: structure_analyze typecheck + e2e. Published wheel never includes it
  # (dependency-groups are not part of distribution metadata). End users opt in via
  # `uvx --with`. [tool.uv.sources] redirects this to ../SongFormer for local editable
  # dev; CI sets UV_NO_SOURCES=1 so the pinned git URL wins.
  "songformer @ git+https://github.com/uribrecher/SongFormer.git@v0.2.0",
]
# Training-only (tone_generation renderer). Leaves the published package entirely.
# Temporary home until #47 moves the training pipeline to reverse-synth-research.
research = [
  "signalflow>=0.4.0,<0.5.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m not slow')"]
asyncio_mode = "auto"

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"        # reads/writes [project].version
tag_format = "v$version"            # must match publish.yml tags: ["v*"] + the PyPI trusted publisher
update_changelog_on_bump = true
major_version_zero = true           # stay in 0.x; breaking changes bump minor until a deliberate 1.0

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[[tool.mypy.overrides]]
module = [
  "librosa.*",
  "sounddevice.*",
  "soundfile.*",
  "scipy.*",
  "demucs.*",
  "tqdm.*",
  "basic_pitch.*",
  "pretty_midi.*",
  "signalflow.*",
  "jsonschema.*",
  "referencing.*",
  "songformer.*",
  "sse_starlette.*",
]
ignore_missing_imports = true
